# xrootd

./: .gitignore  xrootd.spec
.github/workflows/: CI.yml  python.yml
cmake/: FindKerberos5.cmake  Findnghttp2.cmake  XRootDDefaults.cmake  XRootDFindLibs.cmake  XRootDOSDefs.cmake  XRootDSummary.cmake
debian/: control  xrootd-plugins.install
docs/man/: CMakeLists.txt  xjcd.1
src/: CMakeLists.txt  XrdApps.cmake  XrdHeaders.cmake  XrdS3.cmake  XrdVersionPlugin.hh
src/Xrd/: XrdConfig.cc
src/XrdAccToken/: CMakeLists.txt  README.md  XrdAccTokenAccess.cc  XrdAccTokenScope.cc  XrdAccTokenScope.hh
src/XrdApps/: CMakeLists.txt
src/XrdApps/XrdClJCachePlugin/: CMakeLists.txt  README.md  XrdClCacheCleaner.cc  XrdClJCacheFile.cc  XrdClJCacheFile.hh  XrdClJCachePlugin.cc  XrdClJCachePlugin.hh  XrdClVectorCache.cc  XrdClVectorCache.hh
src/XrdApps/XrdClJCachePlugin/cache/: IntervalTree.hh  Journal.cc  Journal.hh  RbTree.hh
src/XrdApps/XrdClJCachePlugin/cleaner/: Cleaner.cc  Cleaner.hh
src/XrdApps/XrdClJCachePlugin/file/: Art.hh  CacheStats.hh  Hierarchy.hh  TimeBench.hh  XrdClJCacheFile.cc  XrdClJCacheFile.hh
src/XrdApps/XrdClJCachePlugin/handler/: XrdClJCacheDirListHandler.cc  XrdClJCacheDirListHandler.hh  XrdClJCacheOpenHandler.cc  XrdClJCacheOpenHandler.hh  XrdClJCachePgReadHandler.hh  XrdClJCacheReadHandler.hh  XrdClJCacheReadVHandler.hh
src/XrdApps/XrdClJCachePlugin/plugin/: XrdClJCachePlugin.cc  XrdClJCachePlugin.hh
src/XrdApps/XrdClJCachePlugin/system/: XrdClJCacheSystem.cc  XrdClJCacheSystem.hh
src/XrdApps/XrdClJCachePlugin/vector/: XrdClVectorCache.cc  XrdClVectorCache.hh
src/XrdApps/XrdClJournalCachePlugin/: README.md
src/XrdApps/XrdClJournalCachePlugin/app/: CacheCleaner.py  XrdClCacheCleaner.cc  xjc.cc  xjccleand.cc  xjcd.cc
src/XrdApps/XrdClJournalCachePlugin/cache/: Journal.cc  Journal.hh
src/XrdApps/XrdClJournalCachePlugin/cleaner/: Cleaner.cc  Cleaner.hh
src/XrdApps/XrdClJournalCachePlugin/daemon/: XjcdRender.cc  XjcdRender.hh  XjcdState.cc  XjcdState.hh
src/XrdApps/XrdClJournalCachePlugin/file/: Art.hh  CacheHeaders.cc  CacheHeaders.hh  CachePath.cc  CachePath.hh  CacheStats.hh  CleanerConfig.cc  CleanerConfig.hh  Digest.cc  Digest.hh  ExternalRedirect.cc  ExternalRedirect.hh  Hierarchy.hh  OriginAllowlist.cc  OriginAllowlist.hh  PolicyConfig.cc  PolicyConfig.hh  PolicyRuntime.cc  PolicyRuntime.hh  TimeBench.hh  XrdClJournalCacheFile.cc  XrdClJournalCacheFile.hh
src/XrdApps/XrdClJournalCachePlugin/handler/: XrdClJournalCacheDirListHandler.cc  XrdClJournalCacheDirListHandler.hh  XrdClJournalCacheOpenHandler.cc  XrdClJournalCacheOpenHandler.hh  XrdClJournalCachePgReadHandler.hh  XrdClJournalCacheReadHandler.hh  XrdClJournalCacheReadVHandler.hh  XrdClJournalCacheStatHandler.cc  XrdClJournalCacheStatHandler.hh
src/XrdApps/XrdClJournalCachePlugin/html/: index.html  index.md
src/XrdApps/XrdClJournalCachePlugin/http/: ForwardingUrl.cc  ForwardingUrl.hh  HttpHeaderMap.hh  JournalCacheHttpExt.cc  JournalCacheHttpExt.hh  journalcache-forwarding-client.conf  journalcache-forwarding.cf  journalcache-http-forwarding.ext.conf  journalcache-http.ext.conf
src/XrdApps/XrdClJournalCachePlugin/plugin/: XrdClJournalCachePlugin.cc  XrdClJournalCachePlugin.hh
src/XrdApps/XrdClJournalCachePlugin/system/: ListCache.cc  ListCache.hh  XrdClJournalCacheSystem.cc  XrdClJournalCacheSystem.hh
src/XrdCl/: XrdClDefaultEnv.cc  XrdClFileSystem.cc  XrdClPlugInManager.cc  XrdClPlugInManager.hh  XrdClXRootDResponses.cc  XrdClXRootDResponses.hh
src/XrdHttp/: CMakeLists.txt  README-KRB5.md  README.md  XrdHttpExtHandler.cc  XrdHttpExtHandler.hh  XrdHttpKrb5.cc  XrdHttpKrb5.hh  XrdHttpProtocol.cc  XrdHttpProtocol.hh  XrdHttpReq.cc  XrdHttpReq.hh  XrdHttpSecurity.cc
src/XrdHttp/wire/: README.md  XrdHttp1ResponseWriter.cc  XrdHttp1ResponseWriter.hh  XrdHttp1Session.cc  XrdHttp1Session.hh  XrdHttp2ResponseWriter.cc  XrdHttp2ResponseWriter.hh  XrdHttp2Session.cc  XrdHttp2Session.hh  XrdHttpConnection.hh
src/XrdMacaroons/: XrdMacaroonsAuthz.cc
src/XrdOAuth2/: CMakeLists.txt  XrdOAuth2.cc  XrdOAuth2.hh  XrdOAuth2Detail.hh
src/XrdOuc/: XrdOucUtils.cc  XrdOucUtils.hh
src/XrdPosix/: XrdPosixDir.cc  XrdPosixXrootdPath.cc  XrdPosixXrootdPath.hh
src/XrdS3/: CMakeLists.txt  README.md  S3Response.cc  S3Response.hh  TODO.md  XrdS3.cc  XrdS3.hh  XrdS3Action.hh  XrdS3Api.cc  XrdS3Api.hh  XrdS3Auth.cc  XrdS3Auth.hh  XrdS3Crypt.cc  XrdS3Crypt.hh  XrdS3ErrorResponse.hh  XrdS3Log.hh  XrdS3ObjectStore.cc  XrdS3ObjectStore.hh  XrdS3Req.cc  XrdS3Req.hh  XrdS3Response.cc  XrdS3Response.hh  XrdS3Router.cc  XrdS3Router.hh  XrdS3ScopedFsId.hh  XrdS3Utils.cc  XrdS3Utils.hh  XrdS3XAttr.hh  XrdS3Xml.cc  XrdS3Xml.hh
src/XrdS3/app/: xrds3  xs3
src/XrdS3/config/: xrootd-s3.cfg
src/XrdS3/example/: s3.cf
src/XrdS3/systemd/: xrootd-s3@.service
src/XrdSec/: XrdSecEntityAttr.cc  XrdSecEntityAttr.hh
src/XrdSeckrb5/: XrdSecProtocolkrb5.cc
src/XrdSecoauth2/: CMakeLists.txt  README.md  XrdSecProtocoloauth2.cc
src/XrdSecoauth2/configs/: wlcg-iam.example.cfg
src/XrdSecoidc/: CMakeLists.txt  XrdSecProtocoloidc.cc
src/XrdSecssh/: CMakeLists.txt  XrdSecProtocolssh.cc
src/XrdSecztn/: XrdSecProtocolztn.cc
src/XrdXrootd/: XrdXrootdConfig.cc  XrdXrootdProtocol.hh
tests/: CMakeLists.txt
tests/XRootD/: CMakeLists.txt  gsi.sh  http.cfg  http.sh  httph2.cfg  httph2.sh  httpkrb5.cfg  httpkrb5.sh  httpparser.cfg  httpparser.sh  httpparserlegacy.cfg  httpparserlegacy.sh
tests/XrdAccTokenTests/: CMakeLists.txt  XrdAccTokenScopeTests.cc
tests/XrdCl/: CMakeLists.txt  JournalCacheLayoutStub.cc  XrdClFileCopyTest.cc  XrdClJournalCache.cc  XrdClLocalFileHandlerTest.cc  XrdClVectorCache.cc
tests/XrdSec/: CMakeLists.txt  XrdSecOAuth2.cc  XrdSecSSH.cc  XrdSeckrb5Tests.cc  XrdSecsssTests.cc  XrdSecztnTests.cc
tests/cluster/: CMakeLists.txt  man1.cfg.in  man2.cfg.in  metaman.cfg.in  setup.sh  srv1.cfg.in  srv2.cfg.in  srv3.cfg.in  srv4.cfg.in  test.sh
tests/common/: CMakeLists.txt  TestEnv.cc
tests/krb5/: kerberos.sh
tests/tls/: tls.sh
utils/: xrdtoken
